# cachyos-calamares

./: CHANGES-3.3  CMakeLists.txt  settings.conf  settings_offline.conf  settings_online.conf
lang/: calamares_de.ts  calamares_en.ts  calamares_en.ts.orig  calamares_en_GB.ts  calamares_lo.ts  calamares_pl.ts  calamares_ru.ts  calamares_sr@latin.ts
src/branding/: CMakeLists.txt
src/branding/cachyos/: branding.desc  calamares-sidebar.qml  show.qml  stylesheet.qss
src/calamares/: CalamaresApplication.cpp  CalamaresWindow.cpp
src/libcalamares/: CMakeLists.txt
src/libcalamares/utils/: Retranslator.h
src/libcalamaresui/: CMakeLists.txt
src/libcalamaresui/translation/: Binding.cpp
src/modules/bootloader/: bootloader.conf  main.py
src/modules/bootloaderchooser/: BootloaderChooserPage.cpp  BootloaderChooserPage.h  BootloaderChooserViewStep.cpp  BootloaderChooserViewStep.h  BootloaderModel.cpp  BootloaderModel.h  CMakeLists.txt  Config.cpp  Config.h  bootloaderchooser.conf  bootloaderchooser.qrc  page_bootloader.ui
src/modules/displaymanager/: displaymanager.conf
src/modules/eos_bootloader/: eos_bootloader.conf
src/modules/finished/: finished.conf
src/modules/fsresizer/: fsresizer.conf
src/modules/fstab/: fstab.conf
src/modules/grubcfg/: grubcfg.conf
src/modules/initcpio/: initcpio.conf
src/modules/initcpiocfg/: main.py
src/modules/machineid/: machineid.conf
src/modules/mhwdcfg/: main.py  mhwdcfg.conf
src/scripts/: create-pacman-keyring  install-gpu-drivers  mkinitcpio-install-calamares  pacstrap_calamares  try-v3  update-mirrorlist
(+36 files in other folders)
